--- a/Cinerva.Web/Views/Property/Edit.cshtml
+++ b/Cinerva.Web/Views/Property/Edit.cshtml
@@ -43,8 +43,8 @@
                 <span asp-validation-for="Zipcode" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @Html.DropDownListFor(m => m.AdministratorId, Model.Admins  )
                 <label asp-for="AdministratorId" class="control-label"></label>
-                <input asp-for="AdministratorId" class="form-control" />
                 <span asp-validation-for="AdministratorId" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -58,8 +58,8 @@
                 <span asp-validation-for="PropertyTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @Html.DropDownListFor(m => m.CityId, Model.Cities  )
                 <label asp-for="CityId" class="control-label"></label>
-                <input asp-for="CityId" class="form-control" />
                 <span asp-validation-for="CityId" class="text-danger"></span>
             </div>
             <div class="form-group">
