azure blob implementation

--- a/Cinerva.Web/Views/Shared/_Layout.cshtml
+++ b/Cinerva.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE html>
+@using UAParser;
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -38,8 +39,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - Cinerva.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-            @ViewBag.userAgent
-            @Context.User.Identity.IsAuthenticated;
+            @Parser.GetDefault().Parse(Context.Request.Headers.UserAgent);
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
