--- a/Cinerva.Web/Views/Property/Index.cshtml
+++ b/Cinerva.Web/Views/Property/Index.cshtml
@@ -45,6 +45,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.CityId)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.imageUrls)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -83,6 +86,11 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CityName)
+            </td>
+            <td>
+                @foreach(var url in item.imageUrls){
+                <img src = "@url" height="128" width="128">
+                }
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) |
